--- a/src/app/planer/planer.component.scss
+++ b/src/app/planer/planer.component.scss
@@ -13,5 +13,7 @@ section {
   align-items: center;
   padding: 0.5rem 1rem;
   border: 1px solid #ccc;
+  background-color: #aaa;
+  border-radius: 0.2rem;
   margin-bottom: 0.5rem;
 }
