--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,7 @@ input {
   border: 1px solid;
   outline: none;
   margin-bottom: 0.5rem;
+  border-radius: 0.2rem;
 }
 .container {
   max-width: 1100px;
@@ -50,17 +51,17 @@ table th {
 .btn {
   display: inline-block;
   background: var(--light-color);
-  color: var(--brd-color);
   padding: 0.4rem 1.3rem;
   font-style: 1rem;
-  border: none;
+  border: 1px solid #000;
   cursor: pointer;
   margin-right: 0.5rem;
   transition: opacity 0.2s;
+  border-radius: 0.2rem;
   outline: none;
+  color: #000;
   &:disabled {
     background: var(--brd-color);
-    color: #fff;
     cursor: not-allowed;
   }
   &:hover:not(:disabled) {
